# Block_Chain

./: .gitignore  Block.h  BlockChain.h  CMakeLists.txt  GEMINI.md  Miner.h  README.md  Transaction.h  User.h
.src/: Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  Hash.cpp  Hash.h  Miner.cpp  Miner.h  Miningworker.cpp  Miningworker.h  Transaction.cpp  Transaction.h  Transform.cpp  Transform.h  User.cpp  User.h  main.cpp
Blockchain_System/: CMakeLists.txt
Blockchain_System/.src/: Block.cpp  Hash.cpp  Hash.h  Miner.h  Transaction.h  Transform.cpp
